# sfluv-proto

./: .gitignore  .gitmodules  README.md  package-lock.json
backend/: .env.template  deploy.go  erc20_permit_test.go  go.mod  go.sum  mdl_test.go  response_1725740013313.json
backend-rs/: Cargo.toml
backend-rs/src/: farcaster.rs
backend-rs/src/abi/: IdRegistry.json
backend/chain/: concierge.go  contracts.go  deploy.go  deploy_test.go  governor.go  governor_test.go  helper.go  mint.go  mint_test.go  watcher.go  watcher_test.go
backend/config/: config.go
backend/crypto/: crypto.go  crypto_test.go
backend/erc4337/: client_test.go  concierge.go  cw_test.go  embed.go  handlers.go  handlers_test.go  init_code.go  init_code_test.go  stackup_test.go  user_op.go  user_op_test.go
backend/luv_server/: TEST_NOTES.txt  server.go
backend/ratio/: RATIO_NOTES.md  client.go  handlers.go  handlers_test.go  ratio_test.go
backend/util/: jwt.go  jwt_test.go  net.go  units.go
contracts/: .gitignore  NOTES.txt  foundry.toml  hardhat.config.ts  package-lock.json  package.json  remappings.txt
contracts/src/: MockCoin.sol  SFLUVAccount.sol  SFLUVGovernor.sol  SFLUVGovernorV1.sol  SFLUVVotes.sol  SFLUVv1.sol
contracts/test/: ERC4337.t.sol  SFLUVGovernor.t.sol  SFLUVv1.t.sol
contracts/typechain-types/: hardhat.d.ts  index.ts
frontend/: .env.template  README.md  config-overrides.js  package-lock.json  package.json  webpack.config.js
frontend/src/: About.tsx  App.js  App.tsx  Buy.tsx  GetFetchData.tsx  Home.tsx  MagicWallet.tsx  Navbar.tsx  Profile.tsx  RatioProfile.tsx  (+14 more)
(+206 files in other folders)
