[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.11"
eyre = "0.6.11"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4.3"
